--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "homepage": "https://github.com/allen-ziegenfus/liferay-json#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "jshint": "^2.9.2",
     "mocha": "^2.5.3"
   },
   "dependencies": {
     "fs": "0.0.2",
     "request": "^2.72.0",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "xml2js": "^0.4.17"
   }
 }
